# nexus-context

./: .gitignore  Cargo.toml  README.md  USAGE_GUIDE.md  download_model.py
src/: db.rs  embeddings.rs  lib.rs  main.rs  watcher.rs
